--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,28 +1,43 @@
-body,
-canvas {
-  position: fixed;
-  width: 60rem;
-  height: 60rem;
-  top: 0;
-  left: 0;
-  z-index: 0;
+body {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #F5F5EF;
 }
 
 canvas {
-  z-index: 0;
+  width: 60rem;
+  height: 60rem;
+  margin-top: 10rem;
 }
 
 .ui {
-  position: absolute;
-  bottom: 0;
+  margin-top: 10rem;
   z-index: 10;
-  background-color: white;
-  width: 100%;
   padding: 2.5rem;
+  display: flex;
 
   button {
-    padding: 1.5 3rem;
-    background-color: black;
-    color: white;
+    padding: 2rem 6rem;
+    font-family: 'InterTight';
+    font-weight: bold;
+    flex: 1;
+    border-radius: 1.2rem;
+    border: 0.3rem solid black;
+    transition: ease-in-out;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: 0.3rem solid black;
+    }
+
+    &:active {
+      transform: scale(0.99);
+    }
+
+    &:first-of-type {
+      margin-right: 2rem;
+    }
   }
 }
