--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -18,6 +18,7 @@ html {
 
 body {
   font-size: 1.6rem;
+  font-family: 'Roboto Mono';
   line-height: 1.6;
   min-height: 100vh;
   overflow-x: hidden;
