--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2,10 +2,12 @@
   width: 20rem;
   display: flex;
   flex-direction: column;
-  // background-color: #2a2a34;
-  border: 0.3rem solid #2a2a34;
+  border: 0.3rem solid #c8dde2;
   height: 60rem;
   border-radius: 0.8rem;
+  justify-content: space-evenly;
+  align-items: center;
+  font-weight: 600;
 }
 
 #app {
@@ -14,14 +16,26 @@
   height: 100vh;
   align-items: center;
   justify-content: space-evenly;
+  position: relative;
 
   .buttons {
     order: 1;
     @include ui();
 
     .button {
-      &:hover {
-        color: white;
+      transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+      cursor: pointer;
+
+      &:active {
+        transform: scale(1.1);
+      }
+
+      svg {
+        pointer-events: none;
+
+        path {
+          pointer-events: none;
+        }
       }
     }
   }
@@ -34,15 +48,36 @@
   .options {
     order: 3;
     @include ui();
+    border: 0;
 
     .option {
-      &:hover {
-        color: white;
+      border-radius: 1.6rem;
+      padding: 1.6rem;
+      border: 0.3rem solid #c8dde2;
+      width: 100%;
+      transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+      cursor: pointer;
+      color: #a6b8bc;
+
+      &:active {
+        transform: scale(1.1);
       }
 
       &.toggled {
+        background-color: #c8dde2;
         color: white;
       }
+    }
+  }
+
+  .credits {
+    position: absolute;
+    bottom: 10rem;
+    font-weight: 999;
+    color: #a6b8bc;
+
+    &__version {
+      font-size: 1.2rem;
     }
   }
 }
